# release-noter

./: .gitignore  LICENSE  README.md  github_release_notes_cli.py  pyproject.toml  release_noter.py
.github/workflows/: publish.yml
